[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/Info.gd" type="Script" id=1]
[ext_resource path="res://Font/LemonMilk.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/Transition.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Info" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 323.0
margin_bottom = 183.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.395
margin_top = 70.3089
margin_right = 197.395
margin_bottom = 81.3089
custom_fonts/font = SubResource( 1 )
text = "by clemonades"
align = 2

[node name="Label5" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.256
margin_top = 13.4446
margin_right = 277.256
margin_bottom = 24.4446
custom_fonts/font = SubResource( 1 )
text = "music"
align = 2

[node name="Label6" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 201.092
margin_top = 32.26
margin_right = 278.092
margin_bottom = 43.26
custom_fonts/font = SubResource( 1 )
text = "sound effects"
align = 2

[node name="Label4" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 123.858
margin_top = 91.0668
margin_right = 200.858
margin_bottom = 144.067
custom_fonts/font = SubResource( 1 )
text = "music by
FoolBoyMedia
and 
furbyguy"
align = 1

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.46248
margin_top = 9.42446
margin_right = 96.4625
margin_bottom = 48.4245
custom_fonts/font = SubResource( 1 )
text = "wasd = move
left click = fire
e = purchase items"
align = 2

[node name="anykey1" type="Label" parent="."]
margin_left = 3.45368
margin_top = 157.803
margin_right = 319.454
margin_bottom = 173.803
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.956863, 0.6, 1 )
text = "- press any key -"
align = 1

[node name="anykey2" type="Label" parent="."]
visible = false
margin_left = 2.51581
margin_top = 157.78
margin_right = 318.516
margin_bottom = 173.78
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "- press any key -"
align = 1

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="MusicButton" type="CheckButton" parent="."]
margin_left = 279.304
margin_top = 9.61677
margin_right = 355.304
margin_bottom = 49.6168
rect_scale = Vector2( 0.4, 0.4 )
pressed = true

[node name="SoundButton" type="CheckButton" parent="."]
margin_left = 279.304
margin_top = 28.8503
margin_right = 355.304
margin_bottom = 68.8503
rect_scale = Vector2( 0.4, 0.4 )
pressed = true
[connection signal="toggled" from="MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="SoundButton" to="." method="_on_SoundButton_toggled"]
